Fix - background jump on mobile, post card padding mobile, text background privacy page,

--- a/portfolio_front_end/src/scss/base/_utilities.scss
+++ b/portfolio_front_end/src/scss/base/_utilities.scss
@@ -42,6 +42,18 @@
     transition: opacity 300ms ease-in-out;
   }
 
-  html {
-    scroll-behavior: smooth;
+  body, html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    height: 100%;
   }
+
+
+
+#tsparticles {
+    position: fixed;
+    width: 100%;
+    height: 200vw;
+    z-index: -1;
+}
